--- a/frontend/dynamic-demo-plugin/package.json
+++ b/frontend/dynamic-demo-plugin/package.json
@@ -13,7 +13,7 @@
   "devDependencies": {
     "@openshift-console/dynamic-plugin-sdk": "file:../packages/console-dynamic-plugin-sdk/dist/core",
     "@openshift-console/dynamic-plugin-sdk-webpack": "file:../packages/console-dynamic-plugin-sdk/dist/webpack",
-    "@types/react": "16.8.13",
+    "@types/react": "^17.0.24",
     "copy-webpack-plugin": "^6.4.1",
     "http-server": "0.12.x",
     "i18next-parser": "^3.3.0",
@@ -39,5 +39,12 @@
     "dependencies": {
       "@console/pluginAPI": "*"
     }
+  },
+  "dependencies": {
+    "@kubernetes/client-node": "^0.15.1",
+    "axios": "^0.21.4",
+    "nodemon": "^2.0.13",
+    "react": "^17.0.2",
+    "react-use-websocket": "^2.7.1"
   }
 }
