--- a/frontend/dynamic-demo-plugin/package.json
+++ b/frontend/dynamic-demo-plugin/package.json
@@ -41,10 +41,15 @@
     }
   },
   "dependencies": {
+    "@konveyor/lib-ui": "^5.1.7",
     "@kubernetes/client-node": "^0.15.1",
     "axios": "^0.21.4",
+    "css-loader": "^6.3.0",
     "nodemon": "^2.0.13",
     "react": "^17.0.2",
-    "react-use-websocket": "^2.7.1"
+    "react-query": "^3.17.0",
+    "react-use-websocket": "^2.7.1",
+    "style-loader": "^3.3.0",
+    "url-loader": "^4.1.1"
   }
 }
