--- a/frontend/dynamic-demo-plugin/package.json
+++ b/frontend/dynamic-demo-plugin/package.json
@@ -11,8 +11,8 @@
     "ts-node": "ts-node -O '{\"module\":\"commonjs\"}' -I '/node_modules/(?!(@openshift-console)/)/'"
   },
   "devDependencies": {
+    "@openshift-console/dynamic-plugin-sdk": "file:../packages/console-dynamic-plugin-sdk/dist/core",
     "@openshift-console/dynamic-plugin-sdk-webpack": "file:../packages/console-dynamic-plugin-sdk/dist/webpack",
-    "@openshift-console/dynamic-plugin-sdk": "0.0.0-beta1",
     "@types/react": "^17.0.24",
     "copy-webpack-plugin": "^6.4.1",
     "http-server": "0.12.x",
